Fixed retreat button link in tool.html

--- a/tool.html
+++ b/tool.html
@@ -136,7 +136,7 @@
     </div>
     
     <div class="back-container">
-        <a href="/" class="btn-glitch">
+        <a href="index.html" class="btn-glitch">
             <span class="text">> RETREAT</span>
             <span class="text-decoration">_</span>
         </a>
